eacer.watchlist/regular/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlist
  template:
    metadata:
      labels:
        app: watchlist
    spec:
      containers:
        - name: watchlist
          image: eacer/watchlist:main
          ports:
            - containerPort: 3000
