eacer.watchlist/regular/service.yml
apiVersion: v1
kind: Service
metadata:
  name: watchlist-service
spec:
  selector:
    app: watchlist
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
